Prevent the G of inBegin being cropped

--- a/css/main.css
+++ b/css/main.css
@@ -1894,6 +1894,7 @@ body {
 
 /* DEMO-SPECIFIC STYLES */
 .typewriter span {
+	padding-bottom: 0.2em !important;
   color: #fff;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
